-исправлен шаблонный тег - ссылка на страницу с товаром и его описанием

--- a/catalog/templates/catalog/includes/inc_card.html
+++ b/catalog/templates/catalog/includes/inc_card.html
@@ -13,7 +13,7 @@
                             <li>Описание товара: {{ product.description|slice:":100" }}</li>
                             <li>Категория товара: {{ product.category.name }}</li>
                         </ul>
-                        <a class="p-2 btn btn-outline-primary" href="{{ product.pk }}/catalog/products/">Перейти</a>
+                        <a class="p-2 btn btn-outline-primary" href="{% url 'catalog:product' product.pk %}">Перейти</a>
                     </div>
                 </div>
             </div>
