--- a/catalog/templates/catalog/product.html
+++ b/catalog/templates/catalog/product.html
@@ -3,5 +3,25 @@
 {% block content %}
 </div>
 
-{% include 'catalog/includes/inc_card.html' %}
+<div class="container">
+    <div class="row text-center">
+        {% for product in product_list %}
+            <div class="col-4">
+                <div class="card mb-4 box-shadow">
+                    <div class="card-header">
+                        <h4 class="my-0 font-weight-normal">{{ product.name|title }}</h4>
+                    </div>
+                    <div class="card-body">
+                        <img src="/media/{{ product.products_image }}" />
+                        <h6 class="card-title pricing-card-title">{{ product.price|floatformat:2 }} рублей</h6>
+                        <ul class="list-unstyled mt-3 mb-4 text-center m-3">
+                            <li>Описание товара: {{ product.description|slice:":100" }}</li>
+                            <li>Категория товара: {{ product.category.name }}</li>
+                            <li>Товар добавлен: {{ product.created_at|date:"d.m.Y"}}</li>
+                        </ul>
+                        <a class="p-2 btn btn-outline-primary text-muted" href="#">Купить</a>
+                </div>
+            </div>
+        {% endfor %}
+    </div>
 {% endblock %}
