--- a/catalog/templates/catalog/product_list.html
+++ b/catalog/templates/catalog/product_list.html
@@ -5,7 +5,7 @@
 
 <div class="container">
     <div class="row text-center">
-        {% for product in product_list %}
+        {% for product in products %}
             <div class="col-4">
                 <div class="card mb-4 box-shadow">
                     <div class="card-header">
@@ -24,4 +24,5 @@
             </div>
         {% endfor %}
     </div>
+</div>
 {% endblock %}
