--- a/catalog/templates/catalog/includes/inc_card.html
+++ b/catalog/templates/catalog/includes/inc_card.html
@@ -2,7 +2,7 @@
 
 <div class="container">
     <div class="row text-center">
-        {% for product in product_list %}
+        {% for product in products %}
             <div class="col-4">
                 <div class="card mb-4 box-shadow">
                     <div class="card-header">
