--- a/catalog/templates/catalog/base.html
+++ b/catalog/templates/catalog/base.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{{ title }}</title>
     <link href="{% static 'bootstrap.min.css' %}" rel="stylesheet">
+    <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/blog/">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3">
+<link href="/docs/5.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+
 </head>
 <body>
 <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
@@ -13,6 +17,7 @@
     <nav class="ms-5">
         <a class="p-2 btn btn-outline-primary" href="/">Главная</a>
         <a class="p-2 btn btn-outline-primary" href="/catalog/">Каталог</a>
+        <a class="p-2 btn btn-outline-primary" href="/blog/">Наш блог</a>
         <a class="p-2 btn btn-outline-primary" href="/contact/">Контакты</a>
     </nav>
 </div>
@@ -31,8 +36,8 @@
             <div class="col-6 col-md">
                 <h5>Категории товаров</h5>
                 <ul class="list-unstyled text-small">
-                    {% for object in object_list %}
-                        <li><a class="text-left" href="{% url 'catalog:catalog_category' object.pk %}">{{object.name}}</a></li>
+                    {% for category in categories %}
+                        <li><a class="text-left" href="{% url 'catalog:catalog_category' category.pk %}">{{category.name}}</a></li>
                     {% endfor %}
                 </ul>
             </div>
@@ -53,5 +58,6 @@
 </div>
 
 <script src="{% static 'bootstrap.bundle.min.js' %}"></script>
+<script src="/docs/5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 </body>
 </html>
