обновил шаблоны, написал два новых шаблона для создания и редактирования версии

--- a/catalog/templates/catalog/base.html
+++ b/catalog/templates/catalog/base.html
@@ -9,6 +9,22 @@
     <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/blog/">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3">
 <link href="/docs/5.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <style>
+      .wrapper {
+        width: 300px;
+        height: 300px;
+      }
+      .exmpl {
+        overflow: hidden;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+      .exmpl img {
+        height: 100%;
+        width: auto;
+      }
+    </style>
 
 </head>
 <body>
