--- a/catalog/templates/catalog/catalog.html
+++ b/catalog/templates/catalog/catalog.html
@@ -2,6 +2,11 @@
 
 {% block content %}
 </div>
+<div class="row text-center">
+    <div class="col-12 mb-5">
+        <a class="btn btn-outline-primary" href="{% url 'catalog:create_product' %}">Добавить товар</a>
+    </div>
+</div>
 
 {% include 'catalog/includes/inc_card.html' %}
 {% endblock %}
