Добавил кнопку "Забыли пароль?"

--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -25,7 +25,9 @@
                         <button type="submit" class="btn btn-outline-success">Войти</button>
                     </form>
                 </div>
-                <div class="card-footer"></div>
+                <div class="card-footer">
+                    <a class="btn btn-outline-warning" href="{% url 'users:ko1216-shop' %}">Забыли пароль?</a>
+                </div>
                 </div>
             </div>
         </div>
