Написал шаблоны для сброса пароля пользователя

--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -26,7 +26,7 @@
                     </form>
                 </div>
                 <div class="card-footer">
-                    <a class="btn btn-outline-warning" href="{% url 'users:ko1216-shop' %}">Забыли пароль?</a>
+                    <a class="btn btn-outline-warning" href="{% url 'users:reset_password' %}">Забыли пароль?</a>
                 </div>
                 </div>
             </div>
